Updated team members controllers
