# app/crud/team_crud_model.go
@@ -12,3 +12,16 @@ type TeamAddMember struct {
 	MemberID string `json:"member_id" validate:"required,lte=255"`
 	UserID   string `json:"user_id" validate:"required,lte=255"`
 }
+
+// TeamRemoveMember struct to describe remove member from team objects.
+type TeamRemoveMember struct {
+	TeamID   string `json:"team_id" validate:"required,lte=255"`
+	MemberID string `json:"member_id" validate:"required,lte=255"`
+	UserID   string `json:"user_id" validate:"required,lte=255"`
+}
+
+// TeamListMembers struct to describe list members of team objects.
+type TeamListMembers struct {
+	TeamID string `json:"team_id" validate:"required,lte=255"`
+	UserID string `json:"user_id" validate:"required,lte=255"`
+}
