# docs/swagger.json
@@ -49,7 +49,39 @@
                 }
             }
         },
-        "/v1/team/members/add": {
+        "/v1/team/members": {
+            "get": {
+                "description": "Get all team members",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Team"
+                ],
+                "summary": "Get all team members",
+                "parameters": [
+                    {
+                        "description": "Team data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/crud.TeamListMembers"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Add a member to a team",
                 "consumes": [
@@ -61,7 +93,7 @@
                 "tags": [
                     "Team"
                 ],
-                "summary": "Create a new team",
+                "summary": "Add a member to a team",
                 "parameters": [
                     {
                         "description": "New member data",
@@ -75,6 +107,38 @@
                 ],
                 "responses": {
                     "201": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Remove a member from a team",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Team"
+                ],
+                "summary": "Create a new team",
+                "parameters": [
+                    {
+                        "description": "Old member data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/crud.TeamRemoveMember"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
                         "description": "ok",
                         "schema": {
                             "type": "string"
@@ -195,6 +259,45 @@
             ],
             "properties": {
                 "team_name": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "user_id": {
+                    "type": "string",
+                    "maxLength": 255
+                }
+            }
+        },
+        "crud.TeamListMembers": {
+            "type": "object",
+            "required": [
+                "team_id",
+                "user_id"
+            ],
+            "properties": {
+                "team_id": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "user_id": {
+                    "type": "string",
+                    "maxLength": 255
+                }
+            }
+        },
+        "crud.TeamRemoveMember": {
+            "type": "object",
+            "required": [
+                "member_id",
+                "team_id",
+                "user_id"
+            ],
+            "properties": {
+                "member_id": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "team_id": {
                     "type": "string",
                     "maxLength": 255
                 },
